objects/Quote.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Descripci_n__c</fullName>
        <label>Descripción</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programa de interes</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Aplican únicamente cuentas de programas académicos</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>0125e000000a7BDAAY</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cotización</relationshipLabel>
        <relationshipName>Cotizacion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valor_programa__c</fullName>
        <label>Valor programa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nombre_del_programa__c</fullName>
        <label>Nombre del programa</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
</CustomObject>